generator client {
    provider = "prisma-client-js"
}

datasource db {
    provider = "postgresql"
    url      = env("DATABASE_URL")
}

enum UserRole {
    buyer
    seller
    admin

    @@map("user_role")
}

enum ProductStatus {
    active
    inactive
    banned

    @@map("product_status")
}

enum OrderStatus {
    pending
    confirmed
    processing
    shipping
    delivered
    cancelled
    refunded

    @@map("order_status")
}

enum VoucherType {
    percentage
    fixed
    free_ship

    @@map("voucher_type")
}

model User {
    id           BigInt   @id @default(autoincrement())
    email        String   @unique @db.VarChar(255)
    passwordHash String?  @map("password_hash")
    fullName     String   @map("full_name") @db.VarChar(255)
    avatar       String?
    phone        String?  @db.VarChar(30)
    role         UserRole @default(buyer)
    isVerified   Boolean  @default(false) @map("is_verified")
    createdAt    DateTime @default(now()) @map("created_at")

    shops         Shop[]
    carts         Cart[]
    orders        Order[]
    addresses     Address[]
    notifications Notification[]
    wishlists     Wishlist[]
    chatSessions  ChatSession[]
    reviews       Review[]

    @@map("users")
}

model Shop {
    id          BigInt   @id @default(autoincrement())
    userId      BigInt   @unique @map("user_id")
    shopName    String   @map("shop_name") @db.VarChar(255)
    slug        String   @unique @db.VarChar(255)
    avatar      String?
    banner      String?
    description String?
    rating      Decimal  @default(0) @db.Decimal(3, 2)
    totalSales  BigInt   @default(0) @map("total_sales")
    isOfficial  Boolean  @default(false) @map("is_official")
    isMall      Boolean  @default(false) @map("is_mall")
    createdAt   DateTime @default(now()) @map("created_at")

    user     User      @relation(fields: [userId], references: [id], onDelete: Cascade)
    products Product[]
    orders   Order[]
    vouchers Voucher[]

    @@map("shops")
}

model Category {
    id        BigInt  @id @default(autoincrement())
    parentId  BigInt? @map("parent_id")
    name      String  @db.VarChar(255)
    slug      String  @unique @db.VarChar(255)
    icon      String?
    image     String?
    sortOrder Int     @default(0) @map("sort_order")
    isActive  Boolean @default(true) @map("is_active")

    parent   Category?  @relation("CategoryTree", fields: [parentId], references: [id], onDelete: Cascade)
    children Category[] @relation("CategoryTree")
    products Product[]

    @@map("categories")
}

model Product {
    id          BigInt        @id @default(autoincrement())
    shopId      BigInt        @map("shop_id")
    categoryId  BigInt        @map("category_id")
    name        String        @db.VarChar(255)
    slug        String        @unique @db.VarChar(255)
    description String?
    thumbnail   String?
    images      Json          @default("[]")
    status      ProductStatus @default(active)
    isFeatured  Boolean       @default(false) @map("is_featured")
    soldCount   BigInt        @default(0) @map("sold_count")
    viewCount   BigInt        @default(0) @map("view_count")
    ratingAvg   Decimal       @default(0) @map("rating_avg") @db.Decimal(3, 2)
    ratingCount BigInt        @default(0) @map("rating_count")
    createdAt   DateTime      @default(now()) @map("created_at")

    shop       Shop               @relation(fields: [shopId], references: [id], onDelete: Cascade)
    category   Category           @relation(fields: [categoryId], references: [id], onDelete: Restrict)
    variants   ProductVariant[]
    attributes ProductAttribute[]
    reviews    Review[]
    wishlists  Wishlist[]

    @@index([shopId])
    @@index([categoryId])
    @@index([status])
    @@index([isFeatured])
    @@map("products")
}

model ProductVariant {
    id            BigInt @id @default(autoincrement())
    productId     BigInt @map("product_id")
    sku           String @unique @db.VarChar(100)
    attributes    Json
    price         BigInt
    originalPrice BigInt @map("original_price")
    stock         Int
    images        Json   @default("[]")

    product    Product     @relation(fields: [productId], references: [id], onDelete: Cascade)
    flashSale  FlashSale?
    cartItems  CartItem[]
    orderItems OrderItem[]

    @@index([productId])
    @@map("product_variants")
}

model ProductAttribute {
    id              BigInt @id @default(autoincrement())
    productId       BigInt @map("product_id")
    attributeName   String @map("attribute_name") @db.VarChar(120)
    attributeValues Json   @map("attribute_values")

    product Product @relation(fields: [productId], references: [id], onDelete: Cascade)

    @@map("product_attributes")
}

model FlashSale {
    id               BigInt   @id @default(autoincrement())
    productVariantId BigInt   @unique @map("product_variant_id")
    flashPrice       BigInt   @map("flash_price")
    originalPrice    BigInt   @map("original_price")
    stock            Int
    sold             Int      @default(0)
    startTime        DateTime @map("start_time")
    endTime          DateTime @map("end_time")
    isActive         Boolean  @default(true) @map("is_active")

    productVariant ProductVariant @relation(fields: [productVariantId], references: [id], onDelete: Cascade)

    @@map("flash_sales")
}

model Cart {
    id        BigInt   @id @default(autoincrement())
    userId    BigInt   @unique @map("user_id")
    createdAt DateTime @default(now()) @map("created_at")
    updatedAt DateTime @updatedAt @map("updated_at")

    user  User       @relation(fields: [userId], references: [id], onDelete: Cascade)
    items CartItem[]

    @@map("carts")
}

model CartItem {
    id               BigInt  @id @default(autoincrement())
    cartId           BigInt  @map("cart_id")
    productVariantId BigInt  @map("product_variant_id")
    quantity         Int     @default(1)
    isSelected       Boolean @default(true) @map("is_selected")

    cart           Cart           @relation(fields: [cartId], references: [id], onDelete: Cascade)
    productVariant ProductVariant @relation(fields: [productVariantId], references: [id], onDelete: Cascade)

    @@unique([cartId, productVariantId])
    @@index([cartId])
    @@index([productVariantId])
    @@map("cart_items")
}

model Order {
    id              BigInt      @id @default(autoincrement())
    userId          BigInt      @map("user_id")
    shopId          BigInt      @map("shop_id")
    orderCode       String      @unique @map("order_code") @db.VarChar(40)
    status          OrderStatus @default(pending)
    shippingAddress Json        @map("shipping_address")
    subtotal        BigInt
    shippingFee     BigInt      @default(0) @map("shipping_fee")
    discount        BigInt      @default(0)
    total           BigInt
    paymentMethod   String      @map("payment_method")
    paymentStatus   String      @default("pending") @map("payment_status")
    note            String?
    createdAt       DateTime    @default(now()) @map("created_at")

    user  User        @relation(fields: [userId], references: [id], onDelete: Restrict)
    shop  Shop        @relation(fields: [shopId], references: [id], onDelete: Restrict)
    items OrderItem[]

    @@index([userId])
    @@index([shopId])
    @@index([status])
    @@map("orders")
}

model OrderItem {
    id               BigInt @id @default(autoincrement())
    orderId          BigInt @map("order_id")
    productVariantId BigInt @map("product_variant_id")
    productSnapshot  Json   @map("product_snapshot")
    quantity         Int
    unitPrice        BigInt @map("unit_price")
    totalPrice       BigInt @map("total_price")

    order          Order          @relation(fields: [orderId], references: [id], onDelete: Cascade)
    productVariant ProductVariant @relation(fields: [productVariantId], references: [id], onDelete: Restrict)
    review         Review?

    @@index([orderId])
    @@map("order_items")
}

model Review {
    id                 BigInt   @id @default(autoincrement())
    orderItemId        BigInt   @unique @map("order_item_id")
    userId             BigInt   @map("user_id")
    productId          BigInt   @map("product_id")
    rating             Int
    comment            String?
    images             Json     @default("[]")
    sellerReply        String?  @map("seller_reply")
    isVerifiedPurchase Boolean  @default(true) @map("is_verified_purchase")
    helpfulCount       Int      @default(0) @map("helpful_count")
    createdAt          DateTime @default(now()) @map("created_at")

    orderItem OrderItem @relation(fields: [orderItemId], references: [id], onDelete: Cascade)
    user      User      @relation(fields: [userId], references: [id], onDelete: Cascade)
    product   Product   @relation(fields: [productId], references: [id], onDelete: Cascade)

    @@index([productId])
    @@map("reviews")
}

model Address {
    id            BigInt  @id @default(autoincrement())
    userId        BigInt  @map("user_id")
    fullName      String  @map("full_name") @db.VarChar(255)
    phone         String  @db.VarChar(30)
    province      String  @db.VarChar(100)
    district      String  @db.VarChar(100)
    ward          String  @db.VarChar(100)
    addressDetail String  @map("address_detail")
    isDefault     Boolean @default(false) @map("is_default")

    user User @relation(fields: [userId], references: [id], onDelete: Cascade)

    @@index([userId])
    @@map("addresses")
}

model Voucher {
    id            BigInt      @id @default(autoincrement())
    shopId        BigInt?     @map("shop_id")
    code          String      @unique @db.VarChar(80)
    type          VoucherType
    value         BigInt
    minOrderValue BigInt      @default(0) @map("min_order_value")
    maxDiscount   BigInt      @default(0) @map("max_discount")
    usageLimit    Int         @default(0) @map("usage_limit")
    usedCount     Int         @default(0) @map("used_count")
    startDate     DateTime    @map("start_date")
    endDate       DateTime    @map("end_date")

    shop Shop? @relation(fields: [shopId], references: [id], onDelete: SetNull)

    @@index([shopId])
    @@map("vouchers")
}

model Notification {
    id        BigInt   @id @default(autoincrement())
    userId    BigInt   @map("user_id")
    type      String   @db.VarChar(80)
    title     String   @db.VarChar(255)
    message   String
    data      Json     @default("{}")
    isRead    Boolean  @default(false) @map("is_read")
    createdAt DateTime @default(now()) @map("created_at")

    user User @relation(fields: [userId], references: [id], onDelete: Cascade)

    @@index([userId])
    @@map("notifications")
}

model Wishlist {
    id        BigInt   @id @default(autoincrement())
    userId    BigInt   @map("user_id")
    productId BigInt   @map("product_id")
    createdAt DateTime @default(now()) @map("created_at")

    user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)
    product Product @relation(fields: [productId], references: [id], onDelete: Cascade)

    @@unique([userId, productId])
    @@index([userId])
    @@map("wishlists")
}

model ChatSession {
    id          BigInt   @id @default(autoincrement())
    userId      BigInt   @map("user_id")
    sessionData Json     @default("{}") @map("session_data")
    createdAt   DateTime @default(now()) @map("created_at")

    user User @relation(fields: [userId], references: [id], onDelete: Cascade)

    @@index([userId])
    @@map("chat_sessions")
}

model ShippingProvider {
    id                BigInt  @id @default(autoincrement())
    name              String  @db.VarChar(255)
    code              String  @unique @db.VarChar(80)
    apiEndpoint       String  @map("api_endpoint")
    isActive          Boolean @default(true) @map("is_active")
    supportedServices Json    @default("[]") @map("supported_services")

    @@map("shipping_providers")
}
